--- a/chloride-dynamics-io-neuron.ipynb
+++ b/chloride-dynamics-io-neuron.ipynb
@@ -17,7 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
